# neige-calm

./: .env.example  .gitignore  Cargo.toml  Makefile  _brief.md  _fix-brief.md  _fix2-brief.md  _pr-body.md  docker-compose.yml
crates/calm-codex-bridge/: Cargo.toml
crates/calm-codex-bridge/src/: main.rs
crates/calm-codex-bridge/tests/: e2e_bridge_enrichment.rs  post_retry.rs  session_id_resolution.rs  stop_hook.rs
crates/calm-editor/: Cargo.toml  README.md
crates/calm-editor/src/: lib.rs
crates/calm-exec/: Cargo.toml
crates/calm-exec/src/: flow.rs  lib.rs  observation.rs  provider.rs  reaction.rs
crates/calm-exec/tests/: full_loop.rs  truth_conformance.rs
crates/calm-proc-supervisor/: Cargo.toml
crates/calm-proc-supervisor/src/: lib.rs  main.rs
crates/calm-proc-supervisor/tests/: attach_race_no_byte_loss.rs  pty_proc_byte_stream_and_replay.rs  pty_writestdin_acked.rs  server_restart_survives.rs  signal_terminates_pty_child.rs
crates/calm-provider/: Cargo.toml
crates/calm-provider/src/: lib.rs
crates/calm-provider/tests/: provider_conformance.rs
crates/calm-server/: Cargo.toml
crates/calm-server/benches/: event_append.rs
crates/calm-server/migrations/: 0002_plugins.sql  0003_settings.sql  0004_events.sql  0006_events_version.sql  0007_events_scope.sql  0008_cards_role.sql  0011_terminals_card_id_restrict.sql  0012_terminals_theme.sql  0013_cards_deletable.sql  0013_terminals_theme_not_null.sql  0014_wave_report_card.sql  0015_cove_folders.sql  0017_terminals_theme_not_null.sql  0018_wave_cwd_terminal_at.sql  0020_terminals_exit_code.sql  0022_spec_push_queue.sql  0023_phase3b_proc_handle.sql  0025_card_codex_threads.sql  0027_shared_daemon_env_signature.sql  0028_runtimes.sql  0029_operations.sql  0029_runtimes_backfill.sql  0030_runtimes_backfill.sql  0032_harness_items_fk.sql  0033_drop_spec_push_queue.sql  0035_pr567_null_pre567_spec_thread_ids.sql  0037_drop_plain_role.sql  0037_rename_worker_request_event_kinds.sql  0038_rename_worker_request_event_kinds.sql  0039_wave_vcs.sql  0041_tasks.sql  0044_bump_gate_result_event_kinds_version.sql
crates/calm-server/src/: actor.rs  aspect.rs  auth.rs  card_fsm.rs  card_kind.rs  card_role_cache.rs  codex_appserver.rs  codex_auto_submit.rs  config.rs  decision_sink.rs  dispatcher.rs  error.rs  event.rs  event_cursor.rs  events_prune.rs  forge_trust.rs  ids.rs  lib.rs  liveness_feeder.rs  main.rs  model.rs  openapi.rs  pending_codex_threads.rs  per_card_lock.rs  proc_identity.rs  proc_supervisor.rs  provider_impls.rs  provider_registry.rs  ratify_state.rs  reaper.rs  recorder_shadow.rs  replay.rs  role_gate.rs  runtime_lookup.rs  runtime_repo.rs  runtime_row.rs  scheduler.rs  session_projection_lookup.rs  session_projection_repo.rs  session_projection_row.rs  (+19 more)
crates/calm-server/tests/: actor.rs  actor_wiring.rs  admin_maintenance.rs  auth.rs  boot_invariants.rs  card_cascade_semantics.rs  cards_deletable.rs  claude_card_endpoint.rs  claude_fsm_overlay.rs  claude_ingest.rs  cleanup_legacy_spec_rows_on_boot.rs  codex_appserver_e2e.rs  codex_card_endpoint.rs  codex_e2e_completed_at.rs  codex_e2e_mcp_double_call.rs  codex_e2e_shared_appserver.rs  codex_e2e_spec_card.rs  codex_e2e_suite.rs  codex_e2e_user_prompt_shared.rs  codex_e2e_worker_mcp_completion.rs  codex_forge_e2e.rs  codex_hands_free.rs  codex_homes_dir_cleanup.rs  codex_ingest.rs  codex_permission_request_overlay.rs  codex_runtime_suite.rs  codex_user_prompt_shared_daemon.rs  codex_worker_shared_daemon.rs  cove_folders.rs  cove_system_endpoint.rs  dispatcher.rs  dispatcher_real_auth_path.rs  dispatcher_role_scope.rs  domain_api_suite.rs  e2e_user_edit_spec_reaction.rs  event_serde_goldens.rs  events_pruner.rs  forge_action_adapter.rs  forge_merge_crash_reboot.rs  forge_suite.rs  (+160 more)
crates/calm-session/: Cargo.toml
crates/calm-session/src/: control.rs  lib.rs  terminal_model.rs  terminal_session.rs
crates/calm-session/tests/: chat_e2e.rs  child_ready.rs  daemon_cli_theme.rs  daemon_exit_sidecar.rs  input_ack.rs  input_ack_e2e.rs  observer_theme_no_error.rs  parent_death_orphan.rs  protocol_error_routing.rs  server_hello_child_ready.rs  terminal_handler_model.rs  terminal_handler_parser.rs  terminal_model.rs  terminal_multi_client_cross_layer.rs  terminal_session_state.rs  v2_protocol.rs  v2_render_plane.rs
crates/calm-truth/: Cargo.toml
crates/calm-truth/migrations/: 0001_init.sql  0005_terminals_pid.sql  0009_coves_kind.sql  0010_card_mcp_tokens.sql  0012_waves_lifecycle.sql  0016_terminals_theme.sql  0019_cards_body_crdt.sql  0021_waves_pinned_at.sql  0024_drop_terminals_daemon_handle.sql  0026_shared_codex_daemon.sql  0030_runtimes_backfill.sql  0031_harness_items.sql  0034_drop_card_codex_threads.sql  0036_pr570_clear_pre567_spec_snapshot_last_thread_id.sql  0037_drop_plain_role.sql  0040_wave_vcs_tree_hash_index.sql  0042_operations_parked.sql  0043_bump_scheduler_event_kinds_version.sql  0045_worker_sessions.sql  0046_worker_flow_items.sql  0047_worker_flow_cursors.sql  0048_worker_flow_cursors_line_hash.sql  0049_worker_flow_items_session_required.sql  0050_root_session_backfill.sql  0051_pr9a_read_flip_indexes.sql  0052_pr9a_ii_terminal_index.sql  0053_worker_sessions_durable_liveness.sql  0054_worker_sessions_card_id.sql  0055_drop_runtimes.sql  0056_workspace_leases.sql  0057_task_liveness_deadlines.sql  0058_tasks_kind_claude.sql  0059_waves_workflow_id.sql  0060_retention_meta.sql  0061_waves_workflow_input.sql  0062_cards_title.sql  0063_cove_folder_repo_identity.sql  0064_waves_launchpad_purpose.sql
crates/calm-truth/src/: card_kind.rs  card_role_cache.rs  decision_gate.rs  error.rs  event_bus.rs  events_prune.rs  lib.rs  mcp_auth.rs  model.rs  repo_identity.rs  role_gate.rs  (+14 more)
crates/calm-types/: Cargo.toml
crates/e2e-egress-proxy/: Cargo.toml
crates/neige-app/: Cargo.toml  config.example.toml
crates/neige-cli/: Cargo.toml
crates/neige-mcp-stdio-shim/: Cargo.toml
plugins/hello-world/: .gitignore  Cargo.toml  README.md  demo.sh  manifest.json
plugins/todo/: .gitignore  Cargo.toml  README.md  demo.sh  manifest.json
(+842 files in other folders)
