[workspace]
resolver = "3"
members = [
    "crates/calm-types",
    "crates/calm-exec",
    "crates/calm-truth",
    "crates/calm-truth-test-harness",
    "crates/calm-provider",
    "crates/calm-server",
    "crates/calm-proc-supervisor",
    "crates/calm-session",
    "crates/calm-codex-bridge",
    "crates/calm-editor",
    "crates/neige-app",
    "crates/neige-cli",
    "crates/neige-mcp-stdio-shim",
]

[profile.dev]
debug = 1
incremental = false

[profile.dev.package."*"]
debug = 0

[profile.test]
# #913 review: line-tables-only (not 0) so failing local tests keep file:line
# in panic backtraces; the dep-wide override below stays at 0 — external code
# doesn't need debuginfo.
debug = "line-tables-only"
incremental = false

[profile.test.package."*"]
debug = 0
