[package]
name = "calm-editor"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ts-rs feature set mirrors calm-server (see crates/calm-server/Cargo.toml).
# `serde-json-impl` lets `serde_json::Value` satisfy the `TS` trait bound so
# the stub `EditorDoc.value` field exports cleanly. `no-serde-warnings`
# silences the upstream lint about deriving both `Serialize` and `TS`.
ts-rs = { version = "12", features = ["serde-json-impl", "no-serde-warnings"] }
