[package]
name = "calm-provider"
version = "0.1.0"
edition = "2024"

[features]
default = []
codex-e2e = []

[dependencies]
calm-types = { path = "../calm-types" }
calm-exec = { path = "../calm-exec" }
calm-session = { path = "../calm-session" }

async-trait = "0.1"
tokio = { version = "1", features = ["sync", "fs", "rt", "io-util"] }
tracing = "0.1"

[dev-dependencies]
calm-truth-test-harness = { path = "../calm-truth-test-harness" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
