[package]
name = "calm-server"
version = "0.1.0"
edition = "2024"
default-run = "calm-server"

[lib]
path = "src/lib.rs"

[features]
default = []
# Gates access to test-fixture-only escape hatches on `AppState`.
# Currently controls `AppState::raw_repo()`, the bypass for the
# `RouteRepo` sync-domain gate (see `state.rs` and `db/mod.rs`
# §1.4.1). Production builds — the `calm-server` binary, every
# `routes/*` handler, `plugin_host/*`, `terminal_sweeper`, and the
# `replay` lib — MUST NOT enable this feature; they go through
# `write_with_event_typed` / `log_pure_event` instead. Integration
# tests under `tests/*.rs` auto-enable this via the `[dev-dependencies]`
# self-loop below.
fixtures = ["calm-proc-supervisor/test-support"]
# Issue #236: opt-in end-to-end test that boots a real `codex` binary
# (the agent's MCP-client side) and verifies the spec card's daemon
# has `NEIGE_MCP_SOCKET` + `NEIGE_MCP_TOKEN` in its process env.
# Off by default because `codex` is not in CI; the feature-gated test
# self-skips when the binary is missing. Run locally with:
#   cargo test --features codex-e2e --test codex_e2e_spec_card -- --nocapture
codex-e2e = []

[[bin]]
name = "calm-server"
path = "src/main.rs"

# Test-only stub plugins, built as side artifacts by `cargo test` and located
# at runtime via `env!("CARGO_BIN_EXE_<name>")`. Kept under tests/fixtures/ so
# they don't pollute `cargo install` and so `cargo build --release` for the
# real binary doesn't drag them along. (Cargo only honors `required-features`
# on bins; `cfg(test)` doesn't gate `[[bin]]`, so these *will* end up in
# release builds — they're tiny and harmless, no `--release` work avoided.)
[[bin]]
name = "plugin-host-stub-echo"
path = "tests/fixtures/stub-plugin-echo/main.rs"

[[bin]]
name = "plugin-host-stub-crash"
path = "tests/fixtures/stub-plugin-crash/main.rs"

[[bin]]
name = "plugin-host-stub-caller"
path = "tests/fixtures/stub-plugin-caller/main.rs"

# M3-mcp-apps M2 — stub that responds to `tools/call` with a configurable
# CallToolResult. Used by `tests/plugin_routes_tool_call.rs` to drive the
# `via_tool_call` REST path end-to-end.
[[bin]]
name = "plugin-host-stub-toolcall"
path = "tests/fixtures/stub-plugin-toolcall/main.rs"

# #177 PR3 — e2e OSC roundtrip child: runs inside a real PTY, performs
# the OSC 11 (default background) startup probe codex does,
# and writes "OK" / "FAIL" to a sidecar result file the test driver polls.
# Used by `tests/theme_osc_roundtrip.rs` — the only test that exercises the
# full byte-level chain from `--terminal-fg/bg` argv through the daemon's
# vte parser to a real PTY child's stdin.
[[bin]]
name = "osc-probe-child"
path = "tests/fixtures/osc-probe-child/main.rs"

# fix/terminal-osc-echo — shell counterpart to `osc-probe-child`. Models
# an interactive shell at a prompt: enters raw mode like zsh's ZLE (ECHO
# off, ICANON off) but, unlike a TUI, never opts into DECSET 1004 (focus
# event reporting) and never queries OSC 10/11, then blocks reading
# stdin. Used by `tests/theme_cooked_shell_no_osc_echo.rs` to prove fix B
# (`daemon.rs` `Effect::TerminalThemeUpdate`) skips the `\x1b[I`
# (focus-in CSI) write when the child hasn't enabled 1004, so a shell's
# ZLE never renders the stray sequence as input. Post-#305 (issue #295
# followup) the daemon no longer writes synthetic OSC 10/11 RGB on theme
# toggle at all — it writes only `\x1b[I`, gated on 1004. Code TUIs
# (e.g. codex) treat the focus-in as `FocusGained` (crossterm parses
# `\x1b[I` regardless of negotiation) and re-query OSC 10/11
# themselves; the daemon's vte parser then synthesizes the solicited
# reply from the cached `default_fg`/`default_bg`.
[[bin]]
name = "cooked-shell-child"
path = "tests/fixtures/cooked-shell-child/main.rs"

[dependencies]
# HTTP / WS
axum = { version = "0.8", features = ["ws", "macros"] }
# Cookie extractor for Slice H's iframe-cookie verify path. `cookie` is the
# only feature we use; matches neige-server's existing pin.
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Serde + JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate", "chrono", "json"] }

# IDs / time / encoding
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"

# Slice H — per-plugin auth tokens. `rand` for OsRng, `sha2` for SHA-256
# (full-entropy tokens don't need bcrypt/argon2 — see design doc §6.1),
# `subtle` for constant-time comparison.
rand = "0.8"
sha2 = "0.10"
subtle = "2"

# Errors
anyhow = "1"
thiserror = "1"

# Wave-as-Actor PR3 (#136): in-memory `CardRoleCache` is a `DashMap<CardId,
# CardRole>` so the role-gate lookup at every write entry stays lock-free
# under contention. The cache is clone-cheap (`Arc<DashMap<…>>` internally)
# which keeps the threading story simple — handlers/sweepers grab a
# reference off `AppState` rather than threading the type through every
# helper.
dashmap = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI / config
clap = { version = "4", features = ["derive", "env"] }
toml_edit = "0.22"

# Plugin manifest parsing — validates `version` + `min_kernel_version`.
# `jsonschema` was considered (per design doc §1) but skipped for Slice A: the
# manifest surface is small and hand-rolled validation in `plugin_host::manifest`
# yields better error messages with one fewer transitive dep tree.
semver = "1"

# OpenAPI generation — utoipa derives schemas off our model structs and
# path attributes off the handlers; utoipa-axum surfaces an `OpenApi` value
# from the registered routes. No swagger-ui — the frontend consumes the
# raw `/api/openapi.json` document to generate TypeScript types.
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"

# WS event TS bindings — `ts-rs` walks the `Event` enum + `Cove`/`Wave`/`Card`/
# `Overlay` and emits a matching TS file. The derive auto-generates a hidden
# `#[test]` named `export_bindings_<Type>` for every `#[ts(export)]`-tagged
# type, so `cargo test export_bindings_` writes `web/src/api/generated-events.ts`
# (driven from `npm run gen:api`). The crate is idle at runtime — emission
# only runs during the test pass, production builds pay only for the empty
# trait impls. `serde-json-impl` makes `serde_json::Value` implement `TS` so
# the `Card`/`Overlay` `payload` fields (overridden to `unknown` via
# `#[ts(type = "unknown")]`) still satisfy the trait bound on their concrete
# Rust type. Adjacently-tagged enums (`#[serde(tag, content)]`) are honored
# natively — see `Event` in `src/event.rs`.
ts-rs = { version = "12", features = ["serde-json-impl", "no-serde-warnings"] }

# Per-spawn `CODEX_HOME` tempdir owned by `routes::codex`. Moved out of
# dev-deps so the production binary can use it too.
tempfile = "3"

# Issue #247 PR1 — CRDT storage foundation for wave-report `body` and
# `summary`. The kernel stores an opaque automerge document blob in
# `cards.body_crdt` alongside the legacy `payload` JSON; the merge
# layer treats both fields uniformly as `automerge::Text`. Frontends
# never see the CRDT bytes — the wire shape stays JSON. Pinned to a
# specific minor so a future major bump is an explicit, reviewed change
# (the on-disk byte format is part of the persistence contract).
automerge = "0.9"

# Local crates
calm-session = { path = "../calm-session" }
calm-proc-supervisor = { path = "../calm-proc-supervisor" }
blake3 = "1.8"

# Plugin host (Slice B): unix-only — used by `plugin_host::process` to send a
# real SIGTERM before falling back to SIGKILL. `tokio::process::Child::kill()`
# only does SIGKILL on unix, so we need this to honor the grace period
# described in design doc §2.4.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
# Required by the `osc-probe-child` and `cooked-shell-child` test fixture
# bins (tests/fixtures/*/main.rs) for raw termios + poll(2) syscalls.
# These fixtures are `[[bin]]`s of this crate so their deps must live
# here, not under [dev-dependencies]. libc is already in the transitive
# graph via tokio/sqlx; declaring it explicitly costs nothing and keeps
# the bins self-contained. Production code paths in `calm-server` don't
# import it.
libc = "0.2"

[dev-dependencies]
# Self-loop to auto-enable the `fixtures` feature when building
# integration tests (`tests/*.rs`). Each integration test is its own
# crate that depends on `calm-server`; this dev-dep entry tells Cargo to
# unify the test-side dependency graph with `fixtures` enabled, exposing
# `AppState::raw_repo()` to the test crates without ever enabling it for
# the production binary or any non-test consumer. See `state.rs` doc on
# `raw_repo` and the `fixtures` feature definition above.
calm-server = { path = ".", features = ["fixtures"] }
# Route integration tests drive the Router via `tower::ServiceExt::oneshot`
# without bringing up a TCP listener. `tower` itself is already a normal dep
# (used by axum) but the `oneshot` helper lives behind the `util` feature.
tower = { version = "0.5", features = ["util"] }
# Used to drain `axum::body::Body` in route tests — Axum 0.8 dropped the
# `to_bytes` convenience; the canonical replacement is `http_body_util::BodyExt::collect`.
http-body-util = "0.1"
# Parser-level assertions for shared CODEX_HOME TOML writer regressions.
toml = "0.8"
# Microbench for the sync engine event_append overhead (design doc §6.4).
# Target: <50µs per call against `sqlite::memory:`.
criterion = { version = "0.5", features = ["async_tokio"] }
# #310 followup — `tests/dispatcher.rs` uses `libc::kill(pid, 0)` as a
# liveness probe to verify the dispatcher's rollback-reap path actually
# killed the partial-spawn daemon. `libc` is already a normal dep but
# integration-test crates need it re-declared as dev-dep to link.
libc = "0.2"
# #318 INV-4 (codex P1 follow-up) — `spec_appserver` resume-reconcile
# timer tests drive virtual time via `tokio::time::pause()` /
# `tokio::time::advance` / `#[tokio::test(start_paused = true)]`, all of
# which live behind tokio's `test-util` feature. Adding it as a dev-only
# feature unifier (tokio is already a normal dep above) keeps the prod
# build free of the extra clock machinery.
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "event_append"
harness = false
