[package]
name = "calm-session"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "calm-session-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "calm-session-client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
portable-pty = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
nix = { version = "0.29", features = ["fs", "term"] }
libc = "0.2"
