[package]
name = "calm-session"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
portable-pty = "0.9"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
# VT parser for the server-side `TerminalModel`. We only use the
# lower-level `Parser` + `Perform` API (no built-in grid — we maintain
# our own in `src/terminal_model.rs`).
vte = { version = "0.13", default-features = false }
# TypeScript bindings for the v2 wire types (`ClientMsg`, `DaemonMsg`, and
# their helper structs/enums). `cargo test export_bindings_` regenerates
# `web/src/api/generated-terminal.ts` from the `#[derive(TS)]` annotations
# in `src/lib.rs` (driven by `npm run gen:api`). Feature flags match
# calm-server's setup: `serde-json-impl` lets `serde_json::Value` implement
# `TS`; `no-serde-warnings` silences serde-default lint chatter on derives
# we don't control.
ts-rs = { version = "12", features = ["serde-json-impl", "no-serde-warnings"] }

[dev-dependencies]
tempfile = "3"
